# drf-byselfedu-poetry

./: pyproject.toml
drfsite/: db.sqlite3
drfsite/drfsite/: settings.py  urls.py
drfsite/women/: admin.py  models.py  pagination.py  permissions.py  serializers.py  views.py
drfsite/women/migrations/: 0001_initial.py  0002_leatherclothes_user.py
